stop hovered authors photo gallery image from covering navigation

--- a/ubyssey/static_src/src/styles/objects/_archive.scss
+++ b/ubyssey/static_src/src/styles/objects/_archive.scss
@@ -400,7 +400,7 @@ $search-bar-height: 46px;
 		cursor: pointer;
 		border: solid black 2px;
 		margin-top: -2px;
-		z-index: 20;
+		z-index: 2;
 	}
 }
 
